--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1; url=https://www.amazon.com/NETGEAR-Orbi-Ultra-Performance-Whole-System/dp/B01K4CZOBS/ref=br_asw_pdt-6?pf_rd_m=ATVPDKIKX0DER&pf_rd_s=&pf_rd_r=PXYXYGVGN3DCDB77N8JG&pf_rd_t=36701&pf_rd_p=6c5ccefe-c7ce-46db-91c9-8ddcaaa20bb0&pf_rd_i=desktop">   
+        <meta http-equiv="refresh" content="1; url=https://www.youtube.com/channel/UCbkq7HFp9FNktJQ9erpj52Q/videos">   
         <script type="text/javascript">
-               window.location.href = "https://www.amazon.com/NETGEAR-Orbi-Ultra-Performance-Whole-System/dp/B01K4CZOBS/ref=br_asw_pdt-6?pf_rd_m=ATVPDKIKX0DER&pf_rd_s=&pf_rd_r=PXYXYGVGN3DCDB77N8JG&pf_rd_t=36701&pf_rd_p=6c5ccefe-c7ce-46db-91c9-8ddcaaa20bb0&pf_rd_i=desktop"
+               window.location.href = "https://www.youtube.com/channel/UCbkq7HFp9FNktJQ9erpj52Q/videos"
         </script>
         <title>Page Redirection</title>
     </head>
