--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1; url=https://www.youtube.com/channel/UCbkq7HFp9FNktJQ9erpj52Q/videos">   
+        <meta http-equiv="refresh" content="1; url=http://18.222.158.91">   
         <script type="text/javascript">
-               window.location.href = "https://www.youtube.com/channel/UCbkq7HFp9FNktJQ9erpj52Q/videos"
+               window.location.href = "http://18.222.158.91"
         </script>
         <title>Page Redirection</title>
     </head>
